--- a/index.html
+++ b/index.html
@@ -1,3 +1,113 @@
-<script>
-    window.location.href = 'demo/sodiaoeditor.v3.html'
-</script>
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>设计器</title>
+    <script type="text/javascript" charset="utf-8" src="/js/modernizr/2.8.3/modernizr.min.js"></script>
+
+    <!--[if lt IE 9]>
+    <script type="text/javascript" charset="utf-8" src="/js/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/js/es5-shim/4.5.9/es5-shim.min.js"></script>
+  <![endif]-->
+    <script type="text/javascript" charset="utf-8" src="sde.config.js"></script>
+    <link rel="stylesheet" href="ueditor/themes/default/css/ueditor.css">
+    <script>
+      function drag(evt) {
+        evt.dataTransfer.setData("Text", evt.target.innerHTML);
+      }
+    </script>
+    <script type="text/javascript" src="ueditor/ueditor.all.min.js?_=1528990315106"></script>
+    <script type="text/javascript" src="ueditor/lang/zh-cn/zh-cn.js?_=1528990315106"></script>
+    <script type="text/javascript" src="js/sde-ie8-design.js?ba2b4d4610f330f6e1ad"></script>
+  </head>
+
+  <body>
+    <h1>测试 start</h1>
+    <p>
+      adfa是发阿斯顿法师打发
+    </p>
+    <div style="width:1200px;margin:0 auto;  box-shadow: 0 0 0 1px #d1d1d1, 0 0 3px 1px #ccc;;height:600px;" id='sde'>
+
+      <p>adfa打发sfadsf阿sfadsf阿斯dfa
+        <span class="sde-ctrl" sde-type="text" sde-right="." id="abc1" sde-model="%7B%22mode%22%3A%22EDITOR%22%2C%22notdel%22%3A0%2C%22strictverify%22%3A0%2C%22verify%22%3A%22%5E%5B0-9%5D*%24%22%2C%22required%22%3A0%2C%22desc%22%3A%22%E6%95%B4%E6%95%B0%E6%8E%A7%E4%BB%B6%22%2C%22remotedata%22%3A%7B%22url%22%3A%22%2Fdata%2Fjson1.json%22%2C%22method%22%3A%22get%22%2C%22data%22%3A%7B%22name%22%3A%22tl%22%7D%7D%7D"
+          contenteditable="false"><span class="sde-value" sde-left="[" sde-right="]" contenteditable="true" >整数控件</span>
+        </span>
+        sd啊斯顿发打发斯蒂芬
+        <span class="sde-ctrl" sde-value='[{ "label": "男", "value": 1 }]' sde-type="select" sde-updatetime="2018-5-3 14:13:02" sde-right="." id="abc-select" sde-model="%7B%22mode%22%3A%22EDITOR%22%2C%22notdel%22%3A0%2C%22strictverify%22%3A0%2C%22required%22%3A0%2C%22multi%22%3A0%2C%22desc%22%3A%22%E6%80%A7%E5%88%AB%22%2C%22bindingdata%22%3A%5B%5D%2C%22remotedata%22%3A%7B%22url%22%3A%22%2Fdata%2Fsex.json%22%2C%22method%22%3A%22get%22%2C%22headers%22%3A%7B%7D%2C%22data%22%3A%7B%7D%7D%7D"
+          contenteditable="false"><span class="sde-value" sde-left="[" sde-right="]" contenteditable="false" >性别</span></span>sd啊打爱的发的蒂芬
+        <span class="sde-ctrl" bindingdata='[{ "label": "感觉很好", "value": 1 }, { "label": "感觉一般", "value": 2 }]' sde-value='[{ "label": "感觉很好", "value": 1 }, { "label": "感觉一般", "value": 2 }]' sde-type="select" sde-updatetime="2018-5-3 14:13:02" sde-right="." id="abc-select1"
+          sde-model="%7B%22mode%22%3A%22EDITOR%22%2C%22notdel%22%3A0%2C%22strictverify%22%3A0%2C%22required%22%3A0%2C%22multi%22%3A1%2C%22desc%22%3A%22%E6%84%9F%E8%A7%89%22%2C%22bindingdata%22%3A%5B%7B%20%22label%22%3A%20%22%E6%84%9F%E8%A7%89%E5%BE%88%E5%A5%BD%22%2C%20%22value%22%3A%201%20%7D%2C%20%7B%20%22label%22%3A%20%22%E6%84%9F%E8%A7%89%E4%B8%80%E8%88%AC%22%2C%20%22value%22%3A%202%20%7D%5D%7D"
+          contenteditable="false"><span class="sde-value" sde-left="[" sde-right="]" contenteditable="false" >感觉</span></span>sd啊打发sf</p>
+      <p>开始时间：<span class="sde-ctrl" id="kssj" sde-type="date" sde-model="%7B%22mode%22%3A%22EDITOR%22%2C%22notdel%22%3A0%2C%22strictverify%22%3A0%2C%22required%22%3A0%2C%22desc%22%3A%22%22%2C%22defvalue%22%3A%222018-5-7%2016%3A08%3A09%22%2C%22format%22%3A%22%7Byyyy%7D-%7BMM%7D-%7Bdd%7D%20%7Bhh%7D%3A%7Bmm%7D%3A%7Bss%7D%22%2C%22min%22%3A%22%22%2C%22max%22%3A%22%22%7D"><span class="sde-value" contenteditable="true" sde-left="[" sde-right="]">开始时间</span></span>阿打发打
+        结束时间：
+        <span class="sde-ctrl" id="jssj" sde-type="date" sde-model="%7B%22mode%22%3A%22EDITOR%22%2C%22notdel%22%3A0%2C%22strictverify%22%3A0%2C%22required%22%3A0%2C%22desc%22%3A%22%22%2C%22defvalue%22%3A%222018-5-7%2016%3A08%3A09%22%2C%22format%22%3A%22%7Byyyy%7D-%7BMM%7D-%7Bdd%7D%20%7Bhh%7D%3A%7Bmm%7D%3A%7Bss%7D%22%2C%22min%22%3A%222018-4-7%2016%3A08%3A09%22%2C%22max%22%3A%222018-5-17%2016%3A08%3A09%22%7D"><span class="sde-value" contenteditable="true" sde-left="[" sde-right="]">结束时间</span></span>阿打发打
+        发随意 <span id="gj" sde-right="." sde-type="checkbox" class="sde-ctrl" sde-model="%7B%22mode%22%3A%22EDITOR%22%2C%22notdel%22%3A0%2C%22strictverify%22%3A0%2C%22required%22%3A0%2C%22multi%22%3A1%2C%22desc%22%3A%22%E6%84%9F%E8%A7%89%22%2C%22bindingdata%22%3A%5B%7B%20%22label%22%3A%20%22%E6%84%9F%E8%A7%89%E5%BE%88%E5%A5%BD%22%2C%20%22value%22%3A%201%20%7D%2C%20%7B%20%22label%22%3A%20%22%E6%84%9F%E8%A7%89%E4%B8%80%E8%88%AC%22%2C%20%22value%22%3A%202%20%7D%5D%7D"
+          bindingdata='[{ "label": "感觉很好", "value": 1 }, { "label": "感觉一般", "value": 2 }]' contenteditable="false"><span contenteditable="true" sde-left="[" sde-right="]"  class="sde-value"><label contenteditable="false"><input type="checkbox" value='{ "label": "感觉很好", "value": 1 }'>感觉很好</label>
+        <label contenteditable="false"><input type="checkbox" value='{ "label": "感觉一般", "value": 2 }'>感觉一般</label>
+      </span></span>时间：
+        <span class="sde-ctrl" id="sysj" sde-type="date" sde-model="%7B%22mode%22%3A%22EDITOR%22%2C%22notdel%22%3A0%2C%22strictverify%22%3A0%2C%22required%22%3A0%2C%22desc%22%3A%22%22%2C%22defvalue%22%3A%222018-5-7%2016%3A08%3A09%22%2C%22format%22%3A%22%7Byyyy%7D%E5%B9%B4%7BMM%7D-%7Bdd%7D%20%7Bhh%7D%3A%7Bmm%7D%3A%7Bss%7D%22%2C%22min%22%3A%222018-4-7%2016%3A08%3A09%22%2C%22max%22%3A%222018-5-17%2016%3A08%3A09%22%7D"><span class="sde-value" contenteditable="true" sde-left="[" sde-right="]">结束时间</span></span>阿打发打
+        发
+        <label sde-type="label" class="sde-ctrl sde-label" id="label1">labellabellabel</label>俺的沙发
+        <table class="tb-dotted">
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>2</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>4</td>
+            </tr>
+          </tbody>
+        </table>
+        adfa打发s 非异步：
+        <span id="gj" sde-right="." sde-type="radio" class="sde-ctrl" sde-model="%7B%22mode%22%3A%22EDITOR%22%2C%22notdel%22%3A0%2C%22strictverify%22%3A0%2C%22required%22%3A0%2C%22multi%22%3A1%2C%22desc%22%3A%22%E6%84%9F%E8%A7%89%22%2C%22bindingdata%22%3A%5B%7B%20%22label%22%3A%20%22%E6%84%9F%E8%A7%89%E5%BE%88%E5%A5%BD%22%2C%20%22value%22%3A%201%20%7D%2C%20%7B%20%22label%22%3A%20%22%E6%84%9F%E8%A7%89%E4%B8%80%E8%88%AC%22%2C%20%22value%22%3A%202%20%7D%5D%7D"
+          bindingdata='[{ "label": "感觉很好", "value": 1 }, { "label": "感觉一般", "value": 2 }]' contenteditable="false"><span contenteditable="true" sde-left="[" sde-right="]"  class="sde-value"><label contenteditable="false"><input type="radio"  name="radio_33"  value='{ "label": "感觉很好", "value": 1 }'>感觉很好</label>
+          <label contenteditable="false"><input type="radio" name="radio_33" value='{ "label": "感觉一般", "value": 2 }'>感觉一般</label>
+        </span></span>
+        fad异步：<span id="gj1" sde-right="." sde-type="radio" sde-model="%7B%22mode%22%3A%22EDITOR%22%2C%22notdel%22%3A0%2C%22strictverify%22%3A0%2C%22required%22%3A0%2C%22multi%22%3A1%2C%22desc%22%3A%22%E6%84%9F%E8%A7%89%22%2C%22bindingdata%22%3A%5B%5D%2C%22remotedata%22%3A%7B%22url%22%3A%22%2Fdata%2Ffeel.json%22%2C%22method%22%3A%22get%22%2C%22headers%22%3A%7B%7D%2C%22data%22%3A%7B%7D%7D%7D"
+          class="sde-ctrl" contenteditable="false"><span contenteditable="true" sde-left="[" sde-right="]"  class="sde-value"></span></span>sf阿dfa adfa打发sfadsf阿sfadsf阿斯df阿sfadsf阿斯dfa
+        <span class="sde-ctrl" sde-type="text" sde-right="." id="abc1" sde-model="%7B%22mode%22%3A%22EDITOR%22%2C%22notdel%22%3A0%2C%22strictverify%22%3A0%2C%22verify%22%3A%22%5E%5B0-9%5D*%24%22%2C%22required%22%3A0%2C%22desc%22%3A%22%E6%95%B4%E6%95%B0%E6%8E%A7%E4%BB%B6%22%2C%22remotedata%22%3A%7B%22url%22%3A%22%2Fdata%2Fjson1.json%22%2C%22method%22%3A%22get%22%2C%22data%22%3A%7B%22name%22%3A%22tl%22%7D%7D%7D"
+          contenteditable="false"><span class="sde-value" sde-left="[" sde-right="]" contenteditable="true" >整数控件</span>
+        </span>
+        sd啊斯顿adf文档节：
+        <div class="sde-ctrl sde-section" contenteditable="false" sde-type="section" id="section1" sde-model="%7B%22mode%22%3A%22EDITOR%22%2C%22originalmode%22%3A%22EDITOR%22%7D">
+          <p contenteditable="true" class="sde-value">区域控件阿斯dfa
+            <span class="sde-ctrl" sde-type="text" sde-right="." id="abc1" sde-model="%7B%22mode%22%3A%22EDITOR%22%2C%22notdel%22%3A0%2C%22strictverify%22%3A0%2C%22verify%22%3A%22%5E%5B0-9%5D*%24%22%2C%22required%22%3A0%2C%22desc%22%3A%22%E6%95%B4%E6%95%B0%E6%8E%A7%E4%BB%B6%22%2C%22remotedata%22%3A%7B%22url%22%3A%22%2Fdata%2Fjson1.json%22%2C%22method%22%3A%22get%22%2C%22data%22%3A%7B%22name%22%3A%22tl%22%7D%7D%7D"
+              contenteditable="false"><span class="sde-value" sde-left="[" sde-right="]" contenteditable="true" >整数控件</span>
+            </span>
+            sd啊斯区域 控件！！！
+          </p>
+        </div>adsfasdfaad打发<span class="sde-revise"><span class="sde-revise-add">新增批注</span></span>阿斯 顿发
+        <span class="sde-revise"><span class="sde-revise-del">删除批注</span></span>阿发 发打fa
+      </p>
+      <p>adsadsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdf fasd
+        <br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfafasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfa fasd
+        <br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfa fasd
+        <br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfa fasd
+        <br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfa fasd
+        <br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfa fasd
+        <br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfa fasd
+        <br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfa fasd
+        <br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfa fasd
+        <br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfa fasd
+        <br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfa fasd
+        <br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfa fasd
+        <br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfa fasd
+        <br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfa fasd
+        <br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfa fasd
+        <br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfasdfsfasd<br>adsfaffa</p>
+    </div>
+
+    <h1>测试 end</h1>
+    <h1>测试 end</h1>
+    <div style="width:1200px;margin:0 auto;  box-shadow: 0 0 0 1px #d1d1d1, 0 0 3px 1px #ccc;;height:600px;" id='sde1'>第二个编辑器实例</div>
+    <h1>测试 end</h1>
+    <script type="text/javascript" charset="utf-8" src="demo.js"></script>
+  </body>
+
+</html>
